--- a/debug.ipynb
+++ b/debug.ipynb
@@ -2,97 +2,373 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import faiss\n",
+    "import finnhub\n",
     "import os\n",
-    "from alpaca.data.historical import StockHistoricalDataClient"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "import openai\n",
+    "import semantic_kernel as sk\n",
+    "import torch\n",
+    "from transformers import pipeline\n",
+    "from semantic_kernel.connectors.ai.open_ai import OpenAIChatCompletion\n",
+    "from alpaca.data import StockHistoricalDataClient\n",
+    "from alpaca.trading.client import TradingClient\n",
+    "from alpaca.trading.requests import MarketOrderRequest\n",
+    "from alpaca.trading.enums import OrderSide, TimeInForce\n",
+    "\n",
+    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY']\n",
+    "FINNHUB_API_KEY = os.environ['FINNHUB_API_KEY']\n",
+    "ALPACA_API_KEY = os.environ['ALPACA_KEY']\n",
+    "ALPACA_SECRET_KEY = os.environ['ALPACA_SECRET']\n",
+    "ALPACA_PAPER_API_KEY = os.environ['ALPACA_PAPER_API_KEY']\n",
+    "ALPACA_PAPER_SECRET_KEY = os.environ['ALPACA_PAPER_API_SECRET']\n",
+    "BASE_URL = 'https://paper-api.alpaca.markets'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__abstractmethods__',\n",
-       " '__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__slots__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_abc_impl',\n",
-       " '_api_key',\n",
-       " '_api_version',\n",
-       " '_base_url',\n",
-       " '_data_get',\n",
-       " '_get_auth_headers',\n",
-       " '_get_default_headers',\n",
-       " '_oauth_token',\n",
-       " '_one_request',\n",
-       " '_request',\n",
-       " '_retry',\n",
-       " '_retry_codes',\n",
-       " '_retry_wait',\n",
-       " '_return_paginated_result',\n",
-       " '_sandbox',\n",
-       " '_secret_key',\n",
-       " '_session',\n",
-       " '_use_basic_auth',\n",
-       " '_use_raw_data',\n",
-       " '_validate_credentials',\n",
-       " '_validate_pagination',\n",
-       " 'delete',\n",
-       " 'get',\n",
-       " 'get_stock_bars',\n",
-       " 'get_stock_latest_bar',\n",
-       " 'get_stock_latest_quote',\n",
-       " 'get_stock_latest_trade',\n",
-       " 'get_stock_quotes',\n",
-       " 'get_stock_snapshot',\n",
-       " 'get_stock_trades',\n",
-       " 'patch',\n",
-       " 'post',\n",
-       " 'put',\n",
-       " 'response_wrapper']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "api_key = os.environ[\"ALPACA_KEY\"]\n",
-    "api_secret = os.environ[\"ALPACA_SECRET\"]\n",
-    "client = StockHistoricalDataClient(api_key, api_secret)"
+    "# setup language models\n",
+    "gpt4_kernel = sk.Kernel()\n",
+    "gpt4_kernel.add_service(\n",
+    "    OpenAIChatCompletion(\n",
+    "        service_id=\"gpt4o\",\n",
+    "        ai_model_id=\"gpt-4o\",\n",
+    "        api_key=OPENAI_API_KEY\n",
+    "    ),\n",
+    ")\n",
+    "gpt3_kernel = sk.Kernel()\n",
+    "gpt3_kernel.add_service(\n",
+    "    OpenAIChatCompletion(\n",
+    "        service_id=\"gpt3.5-turbo\",\n",
+    "        ai_model_id=\"gpt-3.5-turbo\",\n",
+    "        api_key=OPENAI_API_KEY\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "# examples of adding functions to the kernels\n",
+    "gpt4_kernel.add_function(function_name=\"get_stock_price\", plugin_name=\"stock_info_plugin\", prompt=\"What is the stock price of {symbol}?\")\n",
+    "gpt4_kernel.add_function(function_name=\"get_company_profile\", plugin_name=\"stock_info_plugin\", prompt=\"Tell me about the company {symbol}.\")\n",
+    "gpt4_kernel.add_function(function_name=\"get_historical_data\", plugin_name=\"stock_info_plugin\", prompt=\"Give me the historical data for {symbol}.\")\n",
+    "gpt3_kernel.add_function(function_name=\"get_stock_price\", plugin_name=\"stock_info_plugin\", prompt=\"What is the stock price of {symbol}?\")\n",
+    "gpt3_kernel.add_function(function_name=\"get_company_profile\", plugin_name=\"stock_info_plugin\", prompt=\"Tell me about the company {symbol}.\")\n",
+    "gpt3_kernel.add_function(function_name=\"get_historical_data\", plugin_name=\"stock_info_plugin\", prompt=\"Give me the historical data for {symbol}.\")\n",
+    "\n",
+    "\n",
+    "# for using Phi-3 locally\n",
+    "qa_pipeline = pipeline('text-generation', model='microsoft/Phi-3-mini-128k-instruct')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_function = gpt3_kernel.get_function(function_name=\"get_stock_price\", plugin_name=\"stock_info_plugin\")\n",
+    "request_settings = {\n",
+    "    \"prompt\": \"What is the stock price of AAPL?\",\n",
+    "    \"max_tokens\": 150,  # Adjust as needed\n",
+    "    \"temperature\": 0.7,\n",
+    "    \"top_p\": 0.9\n",
+    "}\n",
+    "\n",
+    "# Invoke the function\n",
+    "result = await gpt3_kernel.invoke(test_function, **request_settings)\n",
+    "print(result.get_inner_content().to_dict()['choices'][0]['message']['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finnhub_client = finnhub.Client(FINNHUB_API_KEY)\n",
+    "trading_client = TradingClient(ALPACA_API_KEY, ALPACA_SECRET_KEY, paper=True)\n",
+    "\n",
+    "# Initialize FAISS index\n",
+    "d = 512  # Example dimensionality\n",
+    "index = faiss.IndexIVFPQ(faiss.IndexFlatL2(d), d, 256, 8, 8)\n",
+    "symbol_mapping = {}\n",
+    "\n",
+    "def fetch_stock_symbols():\n",
+    "    #TODO: Fetch stock symbols from API\n",
+    "    return [\"AAPL\", \"MSFT\", \"AMZN\", \"GOOGL\", \"FB\", \"JPM\", \"JNJ\", \"NVDA\", \"PG\", \"DIS\"]\n",
+    "\n",
+    "def fetch_stock_data(symbol):\n",
+    "    # Example function to fetch stock data\n",
+    "    url = f\"https://api.example.com/stock/{symbol}/fundamentals\"\n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    return data\n",
+    "\n",
+    "def preprocess_data(data):\n",
+    "    # Convert your data to a vector\n",
+    "    # Ensure the order of features matches the dimensionality 'd'\n",
+    "    features = ['open', 'high', 'low', 'close', 'volume']\n",
+    "    vector = np.array([data[feature] for feature in features]).astype('float32')\n",
+    "    return vector\n",
+    "\n",
+    "def store_data_in_faiss(symbol, data):\n",
+    "    vector = preprocess_data(data)\n",
+    "    index.add(np.array([vector]))\n",
+    "    symbol_mapping[index.ntotal - 1] = symbol\n",
+    "\n",
+    "def fetch_latest_data_from_faiss():\n",
+    "    # Example function to fetch latest data from FAISS\n",
+    "    k = 1  # Number of nearest neighbors\n",
+    "    query_vector = np.random.random(d).astype('float32')  # Example query vector\n",
+    "    D, I = index.search(np.array([query_vector]), k)\n",
+    "    symbols = [symbol_mapping[i] for i in I[0]]\n",
+    "    return symbols\n",
+    "\n",
+    "def create_debate_prompt(stock_data):\n",
+    "    prompt = [\n",
+    "        {\"role\": \"system\", \"content\": \"You are a financial expert.\"},\n",
+    "        {\"role\": \"user\", \"content\": f\"Analyze the following stock data and debate: {stock_data}\"}\n",
+    "    ]\n",
+    "    return prompt\n",
+    "\n",
+    "def debate_agents(stock_data):\n",
+    "    prompt = create_debate_prompt(stock_data)\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        model=\"gpt-4\",\n",
+    "        messages=prompt,\n",
+    "        temperature=0.7\n",
+    "    )\n",
+    "    return parse_debate_response(response)\n",
+    "\n",
+    "def parse_debate_response(response):\n",
+    "    decisions = [message['content'] for message in response['choices']]\n",
+    "    decision_counts = {\"buy\": 0, \"sell\": 0, \"hold\": 0}\n",
+    "    for decision in decisions:\n",
+    "        if \"buy\" in decision:\n",
+    "            decision_counts[\"buy\"] += 1\n",
+    "        elif \"sell\" in decision:\n",
+    "            decision_counts[\"sell\"] += 1\n",
+    "        else:\n",
+    "            decision_counts[\"hold\"] += 1\n",
+    "    return max(decision_counts, key=decision_counts.get)\n",
+    "\n",
+    "def execute_trade(decision, symbol):\n",
+    "    if decision == 'buy':\n",
+    "        order = MarketOrderRequest(\n",
+    "            symbol=symbol,\n",
+    "            qty=1,\n",
+    "            side=OrderSide.BUY,\n",
+    "            time_in_force=TimeInForce.GTC\n",
+    "        )\n",
+    "    elif decision == 'sell':\n",
+    "        order = MarketOrderRequest(\n",
+    "            symbol=symbol,\n",
+    "            qty=1,\n",
+    "            side=OrderSide.SELL,\n",
+    "            time_in_force=TimeInForce.GTC\n",
+    "        )\n",
+    "    \n",
+    "    trading_client.submit_order(order)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of stock symbols to evaluate\n",
+    "stocks = ['AAPL', 'MSFT', 'GOOGL']\n",
+    "\n",
+    "def get_stock_fundamentals(stock_symbol):\n",
+    "    \"\"\"Fetches basic fundamental data for a given stock symbol using Finnhub API.\"\"\"\n",
+    "    try:\n",
+    "        # Get basic financials\n",
+    "        financials = finnhub_client.company_basic_financials(stock_symbol, 'all')\n",
+    "\n",
+    "        # Extract relevant data\n",
+    "        metric = financials['metric']\n",
+    "        fundamentals = {\n",
+    "            'symbol': stock_symbol,\n",
+    "            'peRatioTTM': metric.get('peNormalizedAnnual', 'N/A'),\n",
+    "            'pbRatio': metric.get('pbAnnual', 'N/A'),\n",
+    "            'dividendYieldTTM': metric.get('currentDividendYieldTTM', 'N/A'),\n",
+    "            'epsTTM': metric.get('epsTTM', 'N/A'),\n",
+    "            'marketCapitalization': metric.get('marketCapitalization', 'N/A'),\n",
+    "            '52WeekHigh': metric.get('52WeekHigh', 'N/A'),\n",
+    "            '52WeekLow': metric.get('52WeekLow', 'N/A'),\n",
+    "        }\n",
+    "        return fundamentals\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error fetching data for {stock_symbol}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "def evaluate_stocks(stock_list):\n",
+    "    \"\"\"Evaluates a list of stocks and prints their fundamental data.\"\"\"\n",
+    "    results = []\n",
+    "    for stock in stock_list:\n",
+    "        fundamentals = get_stock_fundamentals(stock)\n",
+    "        if fundamentals:\n",
+    "            results.append(fundamentals)\n",
+    "    \n",
+    "    return results\n",
+    "\n",
+    "import finnhub\n",
+    "import os\n",
+    "\n",
+    "# List of stock symbols to evaluate\n",
+    "stocks = ['AAPL', 'MSFT', 'GOOGL']\n",
+    "\n",
+    "def get_stock_fundamentals(stock_symbol):\n",
+    "    \"\"\"Fetches basic fundamental data for a given stock symbol using Finnhub API.\"\"\"\n",
+    "    try:\n",
+    "        # Get basic financials\n",
+    "        financials = finnhub_client.company_basic_financials(stock_symbol, 'all')\n",
+    "\n",
+    "        # Get current price\n",
+    "        quote = finnhub_client.quote(stock_symbol)\n",
+    "        current_price = quote['c']\n",
+    "\n",
+    "        # Extract relevant data\n",
+    "        metric = financials['metric']\n",
+    "        fundamentals = {\n",
+    "            'symbol': stock_symbol,\n",
+    "            'current_price': current_price,\n",
+    "            '10DayAverageTradingVolume': metric.get('10DayAverageTradingVolume', 'N/A'),\n",
+    "            '13WeekPriceReturnDaily': metric.get('13WeekPriceReturnDaily', 'N/A'),\n",
+    "            '26WeekPriceReturnDaily': metric.get('26WeekPriceReturnDaily', 'N/A'),\n",
+    "            '52WeekHigh': metric.get('52WeekHigh', 'N/A'),\n",
+    "            '52WeekLow': metric.get('52WeekLow', 'N/A'),\n",
+    "            '52WeekPriceReturnDaily': metric.get('52WeekPriceReturnDaily', 'N/A'),\n",
+    "            '5DayPriceReturnDaily': metric.get('5DayPriceReturnDaily', 'N/A'),\n",
+    "            'peRatioTTM': metric.get('peNormalizedAnnual', 'N/A'),\n",
+    "            'pbRatio': metric.get('pbAnnual', 'N/A'),\n",
+    "            'dividendYieldTTM': metric.get('currentDividendYieldTTM', 'N/A'),\n",
+    "            'epsTTM': metric.get('epsTTM', 'N/A'),\n",
+    "            'marketCapitalization': metric.get('marketCapitalization', 'N/A'),\n",
+    "            'currentRatioAnnual': metric.get('currentRatioAnnual', 'N/A'),\n",
+    "            'quickRatioAnnual': metric.get('quickRatioAnnual', 'N/A'),\n",
+    "            'debt/equityAnnual': metric.get('totalDebt/totalEquityAnnual', 'N/A'),\n",
+    "            'grossMarginAnnual': metric.get('grossMarginAnnual', 'N/A'),\n",
+    "            'netProfitMarginAnnual': metric.get('netProfitMarginAnnual', 'N/A'),\n",
+    "            'operatingMarginAnnual': metric.get('operatingMarginAnnual', 'N/A'),\n",
+    "            'revenueGrowth3Y': metric.get('revenueGrowth3Y', 'N/A'),\n",
+    "            'revenueGrowth5Y': metric.get('revenueGrowth5Y', 'N/A'),\n",
+    "            'revenueGrowthQuarterlyYoy': metric.get('revenueGrowthQuarterlyYoy', 'N/A'),\n",
+    "            'epsGrowth3Y': metric.get('epsGrowth3Y', 'N/A'),\n",
+    "            'epsGrowth5Y': metric.get('epsGrowth5Y', 'N/A'),\n",
+    "            'bookValuePerShareAnnual': metric.get('bookValuePerShareAnnual', 'N/A'),\n",
+    "            'cashFlowPerShareTTM': metric.get('cashFlowPerShareTTM', 'N/A'),\n",
+    "            'enterpriseValue': metric.get('enterpriseValue', 'N/A'),\n",
+    "        }\n",
+    "        return fundamentals\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error fetching data for {stock_symbol}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "def evaluate_stocks(stock_list):\n",
+    "    \"\"\"Evaluates a list of stocks and prints their fundamental data.\"\"\"\n",
+    "    results = []\n",
+    "    for stock in stock_list:\n",
+    "        fundamentals = get_stock_fundamentals(stock)\n",
+    "        if fundamentals:\n",
+    "            results.append(fundamentals)\n",
+    "    \n",
+    "    return results\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    stock_fundamentals = evaluate_stocks(stocks)\n",
+    "    for stock in stock_fundamentals:\n",
+    "        print(stock)\n",
+    "\n",
+    "print(pd.DataFrame(stock_fundamentals))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pd.DataFrame(finnhub_client.company_basic_financials('MSFT', 'All')).T.to_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from alpaca.trading.client import TradingClient\n",
+    "from alpaca.trading.requests import GetAssetsRequest\n",
+    "\n",
+    "trading_client = TradingClient(ALPACA_API_KEY, ALPACA_SECRET_KEY, paper=False)\n",
+    "\n",
+    "# Get our account information.\n",
+    "account = trading_client.get_account()\n",
+    "\n",
+    "# Check if our account is restricted from trading.\n",
+    "if account.trading_blocked:\n",
+    "    print('Account is currently restricted from trading.')\n",
+    "\n",
+    "# Check how much money we can use to open new positions.\n",
+    "print('${} is available as buying power.'.format(account.buying_power))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trading_client.get_all_positions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "symbol = \"MSFT\"  # replace with your symbol\n",
+    "url = f\"https://data.alpaca.markets/v2/stocks/{symbol}/quotes/latest\"\n",
+    "\n",
+    "headers = {\n",
+    "    'accept': 'application/json',\n",
+    "    'APCA-API-KEY-ID': ALPACA_API_KEY,\n",
+    "    'APCA-API-SECRET-KEY': ALPACA_SECRET_KEY\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, headers=headers)\n",
+    "data = response.json()\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://data.alpaca.markets/v2/positions\"\n",
+    "headers = {\n",
+    "    'accept': 'application/json',\n",
+    "    'APCA-API-KEY-ID': ALPACA_API_KEY,\n",
+    "    'APCA-API-SECRET-KEY': ALPACA_SECRET_KEY\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, headers=headers)\n",
+    "data = response.json()\n",
+    "print(data)"
    ]
   }
  ],
