Scaffolding for Azure deployment

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -6,7 +6,149 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import faiss\n",
+    "import os\n",
+    "from semantic_kernel import Kernel\n",
+    "from semantic_kernel.connectors.ai.open_ai import (\n",
+    "    OpenAIChatCompletion,\n",
+    "    AzureChatCompletion,\n",
+    ")\n",
+    "from semantic_kernel.prompt_template import PromptTemplateConfig\n",
+    "\n",
+    "OPENAI_API_KEY = os.environ[\"OPENAI_API_KEY\"]\n",
+    "# AZURE_AI_KEY = os.environ['WEBSHELLINATOR_AZURE_AI_KEY']\n",
+    "\n",
+    "kernel = Kernel()\n",
+    "\n",
+    "# Prepare OpenAI service using credentials stored in the `.env` file\n",
+    "gpt4o_service_id = \"chat-gpt-4o\"\n",
+    "kernel.add_service(\n",
+    "    OpenAIChatCompletion(\n",
+    "        service_id=gpt4o_service_id, api_key=OPENAI_API_KEY, ai_model_id=\"gpt-4o\"\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "gpt35_service_id = \"chat-gpt-35\"\n",
+    "kernel.add_service(\n",
+    "    OpenAIChatCompletion(\n",
+    "        service_id=gpt35_service_id, api_key=OPENAI_API_KEY, ai_model_id=\"gpt-3.5-turbo\"\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# azure_service_id=\"chat-azure\"\n",
+    "#\n",
+    "# kernel.add_service(\n",
+    "#  AzureChatCompletion(\n",
+    "#      service_id=azure_service_id,\n",
+    "#        endpoint=\"https://webshellinator5155040803.openai.azure.com/\",\n",
+    "#        api_key=AZURE_AI_KEY,\n",
+    "#        deployment_name=\"gpt-4\"\n",
+    "#  )\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "# Define the request settings\n",
+    "req_settings = kernel.get_prompt_execution_settings_from_service_id(gpt35_service_id)\n",
+    "req_settings.max_tokens = 2000\n",
+    "req_settings.temperature = 0.7\n",
+    "req_settings.top_p = 0.8\n",
+    "\n",
+    "\n",
+    "prompt = \"\"\"\n",
+    "1) A robot may not injure a human being or, through inaction,\n",
+    "allow a human being to come to harm.\n",
+    "\n",
+    "2) A robot must obey orders given it by human beings except where\n",
+    "such orders would conflict with the First Law.\n",
+    "\n",
+    "3) A robot must protect its own existence as long as such protection\n",
+    "does not conflict with the First or Second Law.\n",
+    "\n",
+    "Give me the TLDR in exactly 5 words.\"\"\"\n",
+    "\n",
+    "prompt_template_config = PromptTemplateConfig(\n",
+    "    template=prompt,\n",
+    "    name=\"tldr\",\n",
+    "    template_format=\"semantic-kernel\",\n",
+    "    execution_settings=req_settings,\n",
+    ")\n",
+    "\n",
+    "function = kernel.add_function(\n",
+    "    function_name=\"tldr_function\",\n",
+    "    plugin_name=\"tldr_plugin\",\n",
+    "    prompt_template_config=prompt_template_config,\n",
+    ")\n",
+    "\n",
+    "# Create a reusable function summarize function\n",
+    "summarize = kernel.add_function(\n",
+    "    function_name=\"tldr_function\",\n",
+    "    plugin_name=\"tldr_plugin\",\n",
+    "    prompt=\"{{$input}}\\n\\nOne line TLDR with the fewest words. Last time you said: {{$history}}. Explain what you said lasst time verabtim the difference between what you said before and this time.\",\n",
+    "    prompt_template_settings=req_settings,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Run your prompt\n",
+    "# Note: functions are run asynchronously\n",
+    "async def main():\n",
+    "    result = await kernel.invoke(function)\n",
+    "    print(result)  # => Robots must not harm humans.\n",
+    "    # Summarize the laws of thermodynamics\n",
+    "    print(\n",
+    "        await kernel.invoke(\n",
+    "            summarize,\n",
+    "            input=\"\"\"\n",
+    "    1st Law of Thermodynamics - Energy cannot be created or destroyed.\n",
+    "    2nd Law of Thermodynamics - For a spontaneous process, the entropy of the universe increases.\n",
+    "    3rd Law of Thermodynamics - A perfect crystal at zero Kelvin has zero entropy.\"\"\",\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    # Summarize the laws of motion\n",
+    "    res = await kernel.invoke(\n",
+    "        summarize,\n",
+    "        input=\"\"\"\n",
+    "    1. An object at rest remains at rest, and an object in motion remains in motion at constant speed and in a straight line unless acted on by an unbalanced force.\n",
+    "    2. The acceleration of an object depends on the mass of the object and the amount of force applied.\n",
+    "    3. Whenever one object exerts a force on another object, the second object exerts an equal and opposite on the first.\"\"\",\n",
+    "    )\n",
+    "\n",
+    "    # Summarize the laws of motion with history\n",
+    "    res = (\n",
+    "        await kernel.invoke(\n",
+    "            summarize,\n",
+    "            input=\"\"\"\n",
+    "    1. An object at rest remains at rest, and an object in motion remains in motion at constant speed and in a straight line unless acted on by an unbalanced force.\n",
+    "    2. The acceleration of an object depends on the mass of the object and the amount of force applied.\n",
+    "    3. Whenever one object exerts a force on another object, the second object exerts an equal and opposite on the first.\"\"\",\n",
+    "        ),\n",
+    "    )\n",
+    "    history = res\n",
+    "\n",
+    "    # Summarize the law of universal gravitation\n",
+    "    print(\n",
+    "        await kernel.invoke(\n",
+    "            summarize,\n",
+    "            input=\"\"\"\n",
+    "    Every point mass attracts every single other point mass by a force acting along the line intersecting both points.\n",
+    "    The force is proportional to the product of the two masses and inversely proportional to the square of the distance between them.\"\"\",\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    # Output:\n",
+    "    # > Energy conserved, entropy increases, zero entropy at 0K.\n",
+    "    # > Objects move in response to forces.\n",
+    "    # > Gravitational force between two point masses is inversely proportional to the square of the distance between them.\n",
+    "\n",
+    "\n",
+    "await main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import finnhub\n",
     "import os\n",
     "import numpy as np\n",
@@ -14,13 +156,15 @@
     "import requests\n",
     "import openai\n",
     "import semantic_kernel as sk\n",
-    "import torch\n",
-    "from transformers import pipeline\n",
     "from semantic_kernel.connectors.ai.open_ai import OpenAIChatCompletion\n",
     "from alpaca.data import StockHistoricalDataClient\n",
     "from alpaca.trading.client import TradingClient\n",
     "from alpaca.trading.requests import MarketOrderRequest\n",
     "from alpaca.trading.enums import OrderSide, TimeInForce\n",
+    "import jupyter_black\n",
+    "\n",
+    "jupyter_black.load()\n",
+    "\n",
     "\n",
     "OPENAI_API_KEY = os.environ['OPENAI_API_KEY']\n",
     "FINNHUB_API_KEY = os.environ['FINNHUB_API_KEY']\n",
