Semantic kernel investigation

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -2,9 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Variable `Symbols.VAR_PREFIX: history` not found in the KernelArguments\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robots must prioritize human safety.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Variable `Symbols.VAR_PREFIX: history` not found in the KernelArguments\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm sorry, but I don't have access to the specific response I provided previously. However, here are concise summaries for the laws of thermodynamics again:\n",
+      "\n",
+      "1st Law: Energy is conserved.\n",
+      "2nd Law: Entropy of the universe increases.\n",
+      "3rd Law: Zero entropy at absolute zero.\n",
+      "\n",
+      "If you would like another explanation or have specific questions about the differences, please let me know!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Variable `Symbols.VAR_PREFIX: history` not found in the KernelArguments\n",
+      "Variable `Symbols.VAR_PREFIX: history` not found in the KernelArguments\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last time I said: \"Every point mass attracts every other with a force proportional to the product of their masses and inversely proportional to the square of the distance between them.\"\n",
+      "\n",
+      "The difference between what I said last time and this time is that in my previous response, the phrase \"acting along the line intersecting both points\" was omitted for brevity.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from semantic_kernel import Kernel\n",
@@ -15,8 +67,6 @@
     "from semantic_kernel.prompt_template import PromptTemplateConfig\n",
     "\n",
     "OPENAI_API_KEY = os.environ[\"OPENAI_API_KEY\"]\n",
-    "# AZURE_AI_KEY = os.environ['WEBSHELLINATOR_AZURE_AI_KEY']\n",
-    "\n",
     "kernel = Kernel()\n",
     "\n",
     "# Prepare OpenAI service using credentials stored in the `.env` file\n",
@@ -33,18 +83,6 @@
     "        service_id=gpt35_service_id, api_key=OPENAI_API_KEY, ai_model_id=\"gpt-3.5-turbo\"\n",
     "    )\n",
     ")\n",
-    "\n",
-    "# azure_service_id=\"chat-azure\"\n",
-    "#\n",
-    "# kernel.add_service(\n",
-    "#  AzureChatCompletion(\n",
-    "#      service_id=azure_service_id,\n",
-    "#        endpoint=\"https://webshellinator5155040803.openai.azure.com/\",\n",
-    "#        api_key=AZURE_AI_KEY,\n",
-    "#        deployment_name=\"gpt-4\"\n",
-    "#  )\n",
-    "# )\n",
-    "\n",
     "\n",
     "# Define the request settings\n",
     "req_settings = kernel.get_prompt_execution_settings_from_service_id(gpt35_service_id)\n",
@@ -83,7 +121,7 @@
     "    function_name=\"tldr_function\",\n",
     "    plugin_name=\"tldr_plugin\",\n",
     "    prompt=\"{{$input}}\\n\\nOne line TLDR with the fewest words. Last time you said: {{$history}}. Explain what you said lasst time verabtim the difference between what you said before and this time.\",\n",
-    "    prompt_template_settings=req_settings,\n",
+    "    prompt_template_config=prompt_template_config,\n",
     ")\n",
     "\n",
     "\n",
@@ -132,15 +170,7 @@
     "    Every point mass attracts every single other point mass by a force acting along the line intersecting both points.\n",
     "    The force is proportional to the product of the two masses and inversely proportional to the square of the distance between them.\"\"\",\n",
     "        )\n",
-    "    )\n",
-    "\n",
-    "    # Output:\n",
-    "    # > Energy conserved, entropy increases, zero entropy at 0K.\n",
-    "    # > Objects move in response to forces.\n",
-    "    # > Gravitational force between two point masses is inversely proportional to the square of the distance between them.\n",
-    "\n",
-    "\n",
-    "await main()"
+    "    )"
    ]
   },
   {
